# physicalai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  bandit_config.yml  dependency_review_config.yml  pull_request_template.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: codeql.yml  dependency-review.yml  library.yml  pr-title.yml  publish-testpypi.yml  publish.yml  renovate-config-validator.yml  renovate.yml  scorecards.yml  secret-scan.yml  security-scan.yml
docs/: index.md
docs/design/: README.md
docs/design/architecture/: architecture.md  packaging-strategy-analysis.md  strategy.md
docs/design/components/: benchmarking.md  camera-interface.md  inferencekit.md  robot-interface.md
docs/design/integrations/: lerobot.md
docs/design/packaging/: physical-ai-two-repo-options.md
docs/explanation/: inference.md
docs/getting-started/: README.md
examples/: collect_train_deploy.ipynb
examples/runtime/: async_inference.py  rtc_inference.py  run_from_config.py  runtime.yaml  sync_inference.py
examples/so101/: move_joints.py
examples/tutorials/: collect_train_deploy.ipynb
src/physicalai/benchmark/: __init__.py
src/physicalai/benchmark/performance/: inference_benchmark.py
src/physicalai/capture/: __init__.py
src/physicalai/capture/transport/: _publisher.py  _publisher_worker.py
src/physicalai/cli/: main.py
src/physicalai/inference/: __init__.py  component_factory.py  model.py
src/physicalai/inference/adapters/: openvino.py  registry.py
src/physicalai/inference/callbacks/: base.py  latency.py  rtc_latency.py  throughput.py
src/physicalai/inference/postprocessors/: __init__.py  action_chunk_trimmer.py  action_normalizer.py  molmoact2.py  stats_denormalizer.py
src/physicalai/inference/preprocessors/: __init__.py  molmoact2.py  resize.py  smolvla.py  stats_normalizer.py
src/physicalai/inference/runners/: single_pass.py
src/physicalai/inference/utils/: __init__.py  _hub.py  action_cursor.py
src/physicalai/robot/: __init__.py  verify.py
src/physicalai/robot/so101/: __init__.py  calibration.py  so101.py
src/physicalai/robot/trossen/: bimanual_widowxai.py  widowxai.py
src/physicalai/runtime/: rtc_execution.py  runtime.py  smoothers.py
tests/unit/benchmark/performance/: test_inference_benchmark.py
tests/unit/inference/: test_action_cursor.py  test_callbacks.py  test_hub.py  test_manifest.py  test_model.py
tests/unit/inference/postprocessors/: test_action_chunk_trimmer.py  test_base.py
tests/unit/inference/preprocessors/: test_base.py  test_resize.py  test_smolvla.py
tests/unit/robot/: test_so101.py
tests/unit/runtime/: test_runtime.py
