[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "physicalai"
version = "0.1.0"
requires-python = ">=3.12"
description = "Lightweight runtime for physical AI inference"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Intel Open Edge Platform" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
tests = ["pytest", "mypy"]
opencv = []
realsense = []
basler = []
genicam = []
capture = [
    "physicalai[opencv]",
    "physicalai[realsense]",
    "physicalai[basler]",
    "physicalai[genicam]",
]
ur = []
abb = []
franka = []
trossen = []
robots = [
    "physicalai[ur]",
    "physicalai[abb]",
    "physicalai[franka]",
    "physicalai[trossen]",
]

[project.urls]
Homepage = "https://github.com/openvinotoolkit/physical-ai"
Documentation = "https://github.com/openvinotoolkit/physical-ai"
Repository = "https://github.com/openvinotoolkit/physical-ai"
Issues = "https://github.com/openvinotoolkit/physical-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/physicalai"]

[tool.hatch.build.targets.sdist]
include = [
    "src/physicalai/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "docs/**",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
show_error_codes = true

[tool.ruff]
target-version = "py312"
line-length = 120
preview = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "notebooks",
]
src = ["src", "tests"]
extend-exclude = ["docs", "examples", "tests", "notebooks"]

[tool.ruff.lint]
select = ["ALL"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-copyright]
notice-rgx = """
# Copyright \(C\) (\d{4}(-\d{4})?) Intel Corporation
# SPDX-License-Identifier: Apache-2\.0
"""

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--strict-config", "--showlocals", "-ra"]
testpaths = "tests"
pythonpath = "src"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_download: marks tests that require downloading external datasets",
    "integration: marks tests as integration tests",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "pass",
    "raise ImportError",
    "raise ValueError",
    "except ImportError:",
]

[tool.coverage.paths]
source = ["src"]
